[DDW-971] Fixes flickering mouse issue

--- a/source/renderer/app/components/wallet/receive/WalletReceiveDialog.scss
+++ b/source/renderer/app/components/wallet/receive/WalletReceiveDialog.scss
@@ -31,7 +31,7 @@
   cursor: pointer;
   font-family: var(--font-regular);
   font-size: 14px;
-  margin-left: 6px;
+  padding-left: 6px;
   opacity: 0.5;
 }
 .copyIcon {
